--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Booklist</title>
+    <title>Kirjalista</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
@@ -12,15 +12,19 @@
 		    <th>Kirjailija</th>
 		     <th>Isbn</th>
 		      <th>Julkaisuvuosi</th>
-		      <th>Hinta</th>
+		         <th>Hinta(euroa)</th>
+		     <th>Kategoria</th>
+		      
 		   
 		</tr>  
     	<tr th:each = "book : ${books}">
     		<td th:text="${book.title}"></td>
     		<td th:text="${book.author}"></td>
+    		
     		<td th:text="${book.isbn}"></td>
-    		<td th:text="${book.year}"></td>
-    		<td th:text="${book.price}"></td>
+    			<td th:text="${book.year}"></td>
+    				<td th:text="${book.price}"></td>
+    		<td th:text="${book.category.name}"></td>
     		
     		
     		
